# MiroThinker-MM

./: .gitignore  README.md  justfile
apps/collect-trace/: README.md  collect_trace.py  eval_utils.py  pyproject.toml
apps/collect-trace/scripts/: collect_trace_claude37.sh  collect_trace_gpt41.sh  collect_trace_gpt5.sh  collect_trace_qwen3.sh  run_benchmark_claude.sh  run_benchmark_qwen.sh
apps/collect-trace/utils/: merge_chatml_msgs_to_one_json.py  process_logs.py
apps/collect-trace/utils/converters/: __init__.py  convert_non_oai_to_chatml.py  convert_oai_to_chatml.py  convert_to_chatml_auto_batch.py  example_usage.py  system_prompts.py
apps/gradio-demo/: .env.example  README.md  main.py  pyproject.toml
apps/miroflow-agent/: .env.example  README.md  main.py  preprocess_long_context.py  pyproject.toml  run_all_context_sizes.sh  run_batch_folder_tasks.py  run_folder_task.py  sample_by_tokens.py  verify_citations.py
apps/miroflow-agent/benchmarks/: common_benchmark.py
apps/miroflow-agent/conf/: config.yaml
apps/miroflow-agent/datasets/: query.jsonl  query1114.jsonl
apps/miroflow-agent/docs/: intermediate_evaluation_proposal.md  rag_rerank_summary_proposal.md  rag_sub_agent_proposal.md
apps/miroflow-agent/scripts/: debug.sh  generate_deep_research_data.py  generate_origin_deep_research_data.py  run_evaluate_multiple_runs_browsecomp.sh  (+10 more)
apps/visualize-trace/: README.md  app.py  run.py  trace_analyzer.py
assets/: QA.md  README-original.md  USE-OS-TOOL.md
libs/miroflow-tools/: README.md  pyproject.toml
libs/miroflow-tracing/: README.md  pyproject.toml
(+724 files in other folders)
