[project]
name = "collect-trace"
version = "0.1.0"
description = "runs user-defined agentic loop to collect multi-turn traces"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "MiroMind Team", email = "miromind@shanda.com" }]
dependencies = [
    "dotenv>=0.9.9",
    "mirage-contrib>=0.1.0",
    "openai>=1.90.0",
]

[tool.uv.sources]
miroflow-tools = { path = "../../libs/miroflow-tools", editable = true }
miroflow-tracing = { path = "../../libs/miroflow-tracing", editable = true }
